order now pop up was off center, fixed

--- a/client/src/components/Inventory/popups/popup.css
+++ b/client/src/components/Inventory/popups/popup.css
@@ -2,7 +2,7 @@
   width: 400px;
   position: fixed;
   top: 40%;
-  left: 100%;
+  left: 50%;
   transform: translate(-50%, -50%);
   background-color: #fff;
   padding: 20px;
